--- a/FFT_hardware/391FFT2/fft_acc/fft_acc.html
+++ b/FFT_hardware/391FFT2/fft_acc/fft_acc.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2023.03.23.18:16:17</td>
+    <td class="l">2023.03.25.14:41:31</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -1049,7 +1049,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">dcache_victim_buf_impl</td>
-        <td class="parametervalue">ram</td>
+        <td class="parametervalue">reg</td>
        </tr>
        <tr>
         <td class="parametername">dcache_size</td>
@@ -2465,8 +2465,8 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </div>
   <table class="blueBar">
    <tr>
-    <td class="l">generation took 0.00 seconds</td>
-    <td class="r">rendering took 0.03 seconds</td>
+    <td class="l">generation took 0.01 seconds</td>
+    <td class="r">rendering took 0.04 seconds</td>
    </tr>
   </table>
  </body>
