--- a/FFT_VGA_combined/Quartus/vga_system/vga_system.html
+++ b/FFT_VGA_combined/Quartus/vga_system/vga_system.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2023.04.11.11:33:05</td>
+    <td class="l">2023.04.11.16:29:22</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -117,6 +117,9 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
      <br/>&#160;&#160;
      <a href="#module_ram_instr"><b>ram_instr</b>
      </a> altera_avalon_onchip_memory2 19.1
+     <br/>&#160;&#160;
+     <a href="#module_rs232_0"><b>rs232_0</b>
+     </a> altera_up_avalon_rs232 17.1
      <br/>&#160;&#160;
      <a href="#module_timer_0"><b>timer_0</b>
      </a> altera_avalon_timer 19.1
@@ -335,6 +338,27 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
     <td class="empty"></td>
     <td class="addr"><span style="color:#989898">0x</span>00040000</td>
     <td class="addr"><span style="color:#989898">0x</span>00040000</td>
+   </tr>
+   <tr>
+    <td class="slavemodule">&#160;
+     <a href="#module_rs232_0"><b>rs232_0</b>
+     </a>
+    </td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+   </tr>
+   <tr>
+    <td class="slaveb">avalon_rs232_slave&#160;</td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="empty"></td>
+    <td class="addr"><span style="color:#989898">0x</span>00001028</td>
+    <td class="empty"></td>
    </tr>
    <tr>
     <td class="slavemodule">&#160;
@@ -1026,7 +1050,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        <a href="#module_pll_0">pll_0</a>
       </td>
       <td class="from">outclk0&#160;&#160;</td>
-      <td class="main" rowspan="58">nios2_gen2_0</td>
+      <td class="main" rowspan="63">nios2_gen2_0</td>
      </tr>
      <tr>
       <td class="to">&#160;&#160;clk</td>
@@ -1085,6 +1109,32 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
       <td></td>
       <td></td>
       <td class="to">&#160;&#160;reset</td>
+     </tr>
+     <tr style="height:6px">
+      <td></td>
+     </tr>
+     <tr>
+      <td></td>
+      <td></td>
+      <td class="from">data_master&#160;&#160;</td>
+      <td class="neighbor" rowspan="4">
+       <a href="#module_rs232_0">rs232_0</a>
+      </td>
+     </tr>
+     <tr>
+      <td></td>
+      <td></td>
+      <td class="to">&#160;&#160;avalon_rs232_slave</td>
+     </tr>
+     <tr>
+      <td></td>
+      <td></td>
+      <td class="from">irq&#160;&#160;</td>
+     </tr>
+     <tr>
+      <td></td>
+      <td></td>
+      <td class="to">&#160;&#160;interrupt</td>
      </tr>
      <tr style="height:6px">
       <td></td>
@@ -2019,7 +2069,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">dataSlaveMapParam</td>
-        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='fft_accel_0.avalon_slave' start='0x0' end='0x40' type='fft_accel.avalon_slave' /&gt;&lt;slave name='nios2_gen2_0.debug_mem_slave' start='0x800' end='0x1000' type='altera_nios2_gen2.debug_mem_slave' /&gt;&lt;slave name='timer_0.s1' start='0x1000' end='0x1020' type='altera_avalon_timer.s1' /&gt;&lt;slave name='jtag_uart_0.avalon_jtag_slave' start='0x1020' end='0x1028' type='altera_avalon_jtag_uart.avalon_jtag_slave' /&gt;&lt;slave name='vga_integrate_0.avalon_slave_0' start='0x1040' end='0x1060' type='vga_integrate.avalon_slave_0' /&gt;&lt;slave name='ram_3.s1' start='0x4000' end='0x5000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_4.s1' start='0x5000' end='0x6000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_2.s1' start='0x6000' end='0x7000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_1.s1' start='0x7000' end='0x8000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_instr.s1' start='0x40000' end='0x48000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='new_sdram_controller_0.s1' start='0x8000000' end='0xC000000' type='altera_avalon_new_sdram_controller.s1' /&gt;&lt;/address-map&gt;</td>
+        <td class="parametervalue">&lt;address-map&gt;&lt;slave name='fft_accel_0.avalon_slave' start='0x0' end='0x40' type='fft_accel.avalon_slave' /&gt;&lt;slave name='nios2_gen2_0.debug_mem_slave' start='0x800' end='0x1000' type='altera_nios2_gen2.debug_mem_slave' /&gt;&lt;slave name='timer_0.s1' start='0x1000' end='0x1020' type='altera_avalon_timer.s1' /&gt;&lt;slave name='jtag_uart_0.avalon_jtag_slave' start='0x1020' end='0x1028' type='altera_avalon_jtag_uart.avalon_jtag_slave' /&gt;&lt;slave name='rs232_0.avalon_rs232_slave' start='0x1028' end='0x1030' type='altera_up_avalon_rs232.avalon_rs232_slave' /&gt;&lt;slave name='vga_integrate_0.avalon_slave_0' start='0x1040' end='0x1060' type='vga_integrate.avalon_slave_0' /&gt;&lt;slave name='ram_3.s1' start='0x4000' end='0x5000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_4.s1' start='0x5000' end='0x6000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_2.s1' start='0x6000' end='0x7000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_1.s1' start='0x7000' end='0x8000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='ram_instr.s1' start='0x40000' end='0x48000' type='altera_avalon_onchip_memory2.s1' /&gt;&lt;slave name='new_sdram_controller_0.s1' start='0x8000000' end='0xC000000' type='altera_avalon_new_sdram_controller.s1' /&gt;&lt;/address-map&gt;</td>
        </tr>
        <tr>
         <td class="parametername">tightlyCoupledDataMaster0MapParam</td>
@@ -2071,7 +2121,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">internalIrqMaskSystemInfo</td>
-        <td class="parametervalue">3</td>
+        <td class="parametervalue">7</td>
        </tr>
        <tr>
         <td class="parametername">customInstSlavesSystemInfo</td>
@@ -2255,7 +2305,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        <a href="#module_clk_0">clk_0</a>
       </td>
       <td class="from">clk&#160;&#160;</td>
-      <td class="main" rowspan="36">pll_0</td>
+      <td class="main" rowspan="39">pll_0</td>
      </tr>
      <tr>
       <td class="to">&#160;&#160;refclk</td>
@@ -2320,6 +2370,22 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
       <td class="from">outclk0&#160;&#160;</td>
       <td class="neighbor" rowspan="2">
        <a href="#module_new_sdram_controller_0">new_sdram_controller_0</a>
+      </td>
+     </tr>
+     <tr>
+      <td></td>
+      <td></td>
+      <td class="to">&#160;&#160;clk</td>
+     </tr>
+     <tr style="height:6px">
+      <td></td>
+     </tr>
+     <tr>
+      <td></td>
+      <td></td>
+      <td class="from">outclk0&#160;&#160;</td>
+      <td class="neighbor" rowspan="2">
+       <a href="#module_rs232_0">rs232_0</a>
       </td>
      </tr>
      <tr>
@@ -5779,6 +5845,113 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
     </tr>
    </table>
   </div>
+  <a name="module_rs232_0"> </a>
+  <div>
+   <hr/>
+   <h2>rs232_0</h2>altera_up_avalon_rs232 v17.1
+   <br/>
+   <div class="greydiv">
+    <table class="connectionboxes">
+     <tr>
+      <td class="neighbor" rowspan="4">
+       <a href="#module_nios2_gen2_0">nios2_gen2_0</a>
+      </td>
+      <td class="from">data_master&#160;&#160;</td>
+      <td class="main" rowspan="10">rs232_0</td>
+     </tr>
+     <tr>
+      <td class="to">&#160;&#160;avalon_rs232_slave</td>
+     </tr>
+     <tr>
+      <td class="from">irq&#160;&#160;</td>
+     </tr>
+     <tr>
+      <td class="to">&#160;&#160;interrupt</td>
+     </tr>
+     <tr style="height:6px">
+      <td></td>
+     </tr>
+     <tr>
+      <td class="neighbor" rowspan="2">
+       <a href="#module_pll_0">pll_0</a>
+      </td>
+      <td class="from">outclk0&#160;&#160;</td>
+     </tr>
+     <tr>
+      <td class="to">&#160;&#160;clk</td>
+     </tr>
+     <tr style="height:6px">
+      <td></td>
+     </tr>
+     <tr>
+      <td class="neighbor" rowspan="2">
+       <a href="#module_clk_0">clk_0</a>
+      </td>
+      <td class="from">clk_reset&#160;&#160;</td>
+     </tr>
+     <tr>
+      <td class="to">&#160;&#160;reset</td>
+     </tr>
+    </table>
+   </div>
+   <br/>
+   <br/>
+   <table class="flowbox">
+    <tr>
+     <td class="parametersbox">
+      <h2>Parameters</h2>
+      <table>
+       <tr>
+        <td class="parametername">ref_clk_freq</td>
+        <td class="parametervalue">5.0E7</td>
+       </tr>
+       <tr>
+        <td class="parametername">avalon_bus_type</td>
+        <td class="parametervalue">Memory Mapped</td>
+       </tr>
+       <tr>
+        <td class="parametername">baud</td>
+        <td class="parametervalue">115200</td>
+       </tr>
+       <tr>
+        <td class="parametername">parity</td>
+        <td class="parametervalue">None</td>
+       </tr>
+       <tr>
+        <td class="parametername">data_bits</td>
+        <td class="parametervalue">8</td>
+       </tr>
+       <tr>
+        <td class="parametername">stop_bits</td>
+        <td class="parametervalue">1</td>
+       </tr>
+       <tr>
+        <td class="parametername">AUTO_DEVICE_FAMILY</td>
+        <td class="parametervalue">CYCLONEV</td>
+       </tr>
+       <tr>
+        <td class="parametername">AUTO_CLK_CLOCK_RATE</td>
+        <td class="parametervalue">50000000</td>
+       </tr>
+       <tr>
+        <td class="parametername">deviceFamily</td>
+        <td class="parametervalue">Cyclone V</td>
+       </tr>
+       <tr>
+        <td class="parametername">generateLegacySim</td>
+        <td class="parametervalue">false</td>
+       </tr>
+      </table>
+     </td>
+    </tr>
+   </table>&#160;&#160;
+   <table class="flowbox">
+    <tr>
+     <td class="parametersbox">
+      <h2>Software Assignments</h2>(none)</td>
+    </tr>
+   </table>
+  </div>
   <a name="module_timer_0"> </a>
   <div>
    <hr/>
@@ -6045,7 +6218,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   <table class="blueBar">
    <tr>
     <td class="l">generation took 0.01 seconds</td>
-    <td class="r">rendering took 0.08 seconds</td>
+    <td class="r">rendering took 0.09 seconds</td>
    </tr>
   </table>
  </body>
